c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@call_only_once.c.2024.linux.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/call_only_once.2024.linux.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
unsafe extern "C" {
    unsafe fn __assert_fail(
        __assertion: *const u8,
        __file: *const u8,
        __line: ::core::ffi::c_uint,
        __function: *const u8,
    ) -> !;
}
pub const __ASSERT_FUNCTION: [u8; 32] = *b"int assert_call_only_once(void)\0";
static mut called: ::core::ffi::c_int = 0 as ::core::ffi::c_int;
unsafe extern "C" fn called_only_once() -> ::core::ffi::c_int {
    called += 1;
    return 1 as ::core::ffi::c_int;
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn assert_call_only_once() -> ::core::ffi::c_int {
    '_c2rust_label: {
        if called_only_once() != 0 {
        } else {
            __assert_fail(
                b"called_only_once()\0".as_ptr() as *const u8,
                b"./tests/snapshots/os-specific/call_only_once.c\0"
                    .as_ptr() as *const u8,
                12 as ::core::ffi::c_uint,
                __ASSERT_FUNCTION.as_ptr(),
            );
        }
    };
    return called;
}
