c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@compound_literals.c.2021.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/compound_literals.2021.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
#![feature(raw_ref_op)]
#[no_mangle]
pub static mut static_single_int: ::core::ffi::c_int = 42;
static mut c2rust_lvalue: ::core::ffi::c_int = 42;
#[no_mangle]
pub static mut static_single_int_ptr: *mut ::core::ffi::c_int =
    unsafe { &raw const c2rust_lvalue as *mut ::core::ffi::c_int };
static mut c2rust_lvalue_0: [::core::ffi::c_int; 2] = [42, 9001];
#[no_mangle]
pub static mut static_int_ptr_to_array: *mut ::core::ffi::c_int =
    unsafe { &raw const c2rust_lvalue_0 as *mut ::core::ffi::c_int };
static mut c2rust_lvalue_1: [::core::ffi::c_int; 2] = [42, 9001];
#[no_mangle]
pub static mut static_volatile_int_ptr_to_array: *mut ::core::ffi::c_int =
    unsafe { &raw const c2rust_lvalue_1 as *mut ::core::ffi::c_int };
static mut c2rust_lvalue_2: [::core::ffi::c_int; 2] = [42, 9001];
#[no_mangle]
pub static mut static_int_array_ptr: *mut [::core::ffi::c_int; 2] =
    unsafe { &raw const c2rust_lvalue_2 as *mut [::core::ffi::c_int; 2] };
static mut c2rust_lvalue_3: [u8; 6] = *b"hello\0";
#[no_mangle]
pub static mut static_char_ptr_to_array: *mut u8 = unsafe { &raw const c2rust_lvalue_3 as *mut u8 };
static mut c2rust_lvalue_4: [u8; 6] = *b"hello\0";
#[no_mangle]
pub static mut static_char_array_ptr: *mut [u8; 6] =
    unsafe { &raw const c2rust_lvalue_4 as *mut [u8; 6] };
pub const SINGLE_INT: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
pub const INT_ARRAY: [::core::ffi::c_int; 2] =
    [42 as ::core::ffi::c_int, 9001 as ::core::ffi::c_int];
pub const CHAR_ARRAY: [u8; 6] = *b"hello\0";
#[no_mangle]
pub unsafe extern "C" fn local_compound_literals() {
    let mut single_int: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut c2rust_lvalue_5: ::core::ffi::c_int = 42 as ::core::ffi::c_int;
    let mut single_int_ptr: *mut ::core::ffi::c_int = &raw mut c2rust_lvalue_5;
    let mut c2rust_lvalue_6: [::core::ffi::c_int; 2] =
        [42 as ::core::ffi::c_int, 9001 as ::core::ffi::c_int];
    let mut int_ptr_to_array: *mut ::core::ffi::c_int =
        &raw mut c2rust_lvalue_6 as *mut ::core::ffi::c_int;
    let mut c2rust_lvalue_7: [u8; 6] = *b"hello\0";
    let mut char_ptr_to_array: *mut u8 = &raw mut c2rust_lvalue_7 as *mut u8;
    let mut c2rust_lvalue_8: [::core::ffi::c_int; 2] =
        [42 as ::core::ffi::c_int, 9001 as ::core::ffi::c_int];
    let mut int_array_ptr: *mut [::core::ffi::c_int; 2] =
        &raw mut c2rust_lvalue_8 as *mut [::core::ffi::c_int; 2];
    let mut c2rust_lvalue_9: [u8; 6] = *b"hello\0";
    let mut char_array_ptr: *mut [u8; 6] = &raw mut c2rust_lvalue_9 as *mut [u8; 6];
    let mut macro_single_int: ::core::ffi::c_int = SINGLE_INT;
    let mut macro_single_int_ptr: *mut ::core::ffi::c_int =
        &mut SINGLE_INT as *mut ::core::ffi::c_int;
    let mut macro_int_ptr_to_array: *mut ::core::ffi::c_int = INT_ARRAY.as_mut_ptr();
    let mut macro_char_ptr_to_array: *mut u8 = CHAR_ARRAY.as_mut_ptr();
    let mut macro_int_array_ptr: *mut [::core::ffi::c_int; 2] =
        &mut INT_ARRAY as *mut [::core::ffi::c_int; 2];
    let mut macro_char_array_ptr: *mut [u8; 6] = &mut CHAR_ARRAY as *mut [u8; 6];
}
#[no_mangle]
pub unsafe extern "C" fn deref_addrof() {
    let mut c2rust_lvalue_5: [::core::ffi::c_int; 3] = [
        1 as ::core::ffi::c_int,
        2 as ::core::ffi::c_int,
        3 as ::core::ffi::c_int,
    ];
    let mut p: *mut ::core::ffi::c_int = &raw mut c2rust_lvalue_5 as *mut ::core::ffi::c_int;
}
